--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,12 @@
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --white-color: #ffffff;
-  --alternative-white-color: #F5F4FA;
-  --grey-fon-color: #C4C4C4;
+  --alternative-white-color: #f5f4fa;
+  --grey-fon-color: #c4c4c4;
   --border-color: #eeeeee;
   --line-color: #ececec;
-  --icon-color: #AFB1B8;
-  --footer-color: #2F303A;
+  --icon-color: #afb1b8;
+  --footer-color: #2f303a;
   --footer-icon: rgba(255, 255, 255, 0.1);
 }
 
@@ -44,9 +44,7 @@ img {
 
 .link {
   text-decoration: none;
-  font-family: inherit;
-  line-height: 1.14em;
-  letter-spacing: 0.02em;
+  
 }
 
 .section {
@@ -54,7 +52,7 @@ img {
   padding-bottom: 94px;
 }
 
-.container {  
+.container {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
@@ -65,7 +63,8 @@ img {
   border-bottom: 1px solid var(--line-color);
 }
 .about-container {
-  display: flex;  
+  display: flex;
+  align-items: baseline;
 }
 
 .menu-nav {
@@ -87,13 +86,10 @@ img {
 
 /* ste-nav */
 
-.site-nav{
+.site-nav {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
   margin-left: 93px;
 }
-
 
 .site-link {
   font-weight: 500;
@@ -106,8 +102,8 @@ img {
 .current {
   color: var(--accent-color);
 }
-.site-nav-item+.site-nav-item,
-.out-nav-item+.out-nav-item {
+.site-nav-item + .site-nav-item,
+.out-nav-item + .out-nav-item {
   margin-left: 50px;
 }
 
@@ -122,6 +118,11 @@ img {
 .out-link {
   font-weight: 500;
   color: var(--primary-text-color);
+  font-family: inherit;
+  line-height: 1.14em;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
 }
 
 .out-nav-icon {
@@ -143,7 +144,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--grey-fon-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../img/hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../img/hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -181,7 +183,7 @@ img {
 
 .hero-btn:hover,
 .hero-btn:focus {
-  background: #188CE8;
+  background: #188ce8;
 }
 
 .section-title {
@@ -199,15 +201,21 @@ img {
   display: flex;
 }
 
-.feature-icon{
-  padding: 25px 100px;
+.feature-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  background-color: var(--alternative-white-color);
+  border-radius: 4px;
 }
 
 .feature-item {
   width: 270px;
 }
 
-.feature-item+.feature-item {
+.feature-item + .feature-item {
   margin-left: 30px;
 }
 
@@ -232,12 +240,12 @@ img {
 }
 
 .work-list,
-.team-list {  
-  display: flex;  
+.team-list {
+  display: flex;
 }
 
-.work-item+.work-item,
-.team-item+.team-item {
+.work-item + .work-item,
+.team-item + .team-item {
   margin-left: 30px;
 }
 /* team */
@@ -246,7 +254,8 @@ img {
   background-color: var(--alternative-white-color);
 }
 .team-item {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
   background-color: var(--white-color);
@@ -287,16 +296,18 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: var(--icon-color);
+  color: var(--icon-color);
+  /* fill: var(--icon-color); */
 }
 .social-icon {
   width: 20px;
   height: 20px;
+  fill: currentColor;
 }
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent-color);
-  fill: var(--white-color);
+  color: var(--white-color);
 }
 
 /* Постоянные клиенты */
@@ -305,20 +316,24 @@ img {
   display: flex;
 }
 
-.client-item+.client-item {
+.client-item + .client-item {
   margin-left: 30px;
 }
 
 .client-link {
-  display: block;
-  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-  fill: var(--icon-color);
+  color: var(--icon-color);
 }
 
 .client-link:hover,
 .client-link:focus {
+  color: var(--accent-color);
   border-color: var(--accent-color);
   fill: var(--accent-color);
 }
@@ -326,6 +341,7 @@ img {
 .client-icon {
   width: 106px;
   height: 60px;
+  fill: currentColor;
 }
 /* footer */
 
@@ -334,7 +350,7 @@ img {
   padding: 60px 0;
 }
 
-.footer-text{
+.footer-text {
   color: var(--white-color);
 }
 
@@ -363,7 +379,7 @@ img {
   color: var(--accent-color);
 }
 
-.addres-item+.addres-item {
+.addres-item + .addres-item {
   margin-top: 9px;
 }
 
@@ -385,13 +401,14 @@ img {
   justify-content: center;
   margin-top: 20px;
 }
-.social-list>.social-item {
+.social-list > .social-item {
+  color: var(--white-color);
   border-radius: 50%;
   background-color: var(--footer-icon);
 }
 
 .social-list .social-link {
-  fill: var(--white-color);
+  color: var(--white-color);
 }
 /* portfolio */
 
@@ -419,16 +436,15 @@ img {
   color: var(--title-text-color);
   padding: 6px 22px;
   border-style: none;
-  border-radius: 4px; 
+  border-radius: 4px;
   cursor: pointer;
 }
 .filter-btn:hover,
-.filter-btn:focus{
- background: var(--accent-color);
- color: var(--white-color);
- box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
-             0px 1px 2px rgba(0, 0, 0, 0.08), 
-             0px 2px 2px rgba(0, 0, 0, 0.12);
+.filter-btn:focus {
+  background: var(--accent-color);
+  color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* portfolio card */
@@ -436,6 +452,10 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+}
+
+.portfolio-link {
+  display: block;
 }
 .portfolio-item {
   width: 370px;
@@ -445,7 +465,7 @@ img {
 .portfolio-item:nth-child(3n) {
   margin-right: 0;
 }
-.portfolio-item:nth-last-child(-n+3) {
+.portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 .portfolio-text {
@@ -469,11 +489,10 @@ img {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-              0px 4px 4px rgba(0, 0, 0, 0.06), 
-              1px 4px 6px rgba(0, 0, 0, 0.16);
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* Скрыть заголовки */
@@ -484,7 +503,7 @@ img {
   margin: -1px;
   border: 0;
   padding: 0;
-  
+
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
